Fix resume headers breaking on mobile

--- a/css/resume.css
+++ b/css/resume.css
@@ -31,6 +31,21 @@ section h2 span {
   top: 0.75em;
 }
 
+@media only screen and (max-width: 700px) {
+  section h2 {
+    display: flex;
+    flex-direction: column;
+  }
+
+  section h2 span {
+    width: 100%;
+    position: relative;
+    right: unset;
+    text-align: unset;
+    top: unset;
+  }
+}
+
 section h3 {
   margin: 0;
   font-size: larger;
